--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
     background: #E9EAEC;
     line-height: 22px;
+    /* font-family: 'Inconsolata', monospace; */
+    font-family: 'Montserrat', sans-serif; 
   }
   .container{
     width: 800px;
@@ -10,7 +12,7 @@ body{
     border: 3px solid  #333652;
   }
   .subtitle{
-    font-family: 'Inconsolata', monospace;
+    /* font-family: 'Inconsolata', monospace; */
     font-size: 25px;
     font-weight: bold;
     color: #189AB4;
@@ -21,7 +23,7 @@ body{
     padding: 6px;
   }
   .designTipografy{
-    font-family: 'Montserrat', sans-serif;  
+    /* font-family: 'Montserrat', sans-serif;   */
     font-size: 14px;
     color: #5D6980;
   }
@@ -32,6 +34,11 @@ body{
   .project,.descriptionTec{
     color: #000;
     font-size: 15px;
+  }
+  .subtitle_bold_black{
+    color: #000;
+    font-size: 15px;
+    font-weight: bold;
   }
  
   /* left-side */
@@ -55,7 +62,7 @@ body{
   }
   
   .pDesign{
-    font-family: 'Montserrat', sans-serif;
+    /* font-family: 'Montserrat', sans-serif; */
     font-size: 15px;
   }
 
